# ProyectoAlgoritmos

./: CMakeLists.txt
documentacion/: info.txt
solucionComputacional/: client_bst.c  client_bst.h  codigo_fuente_completo.txt  delivery_queue.c  delivery_queue.h  files.c  files.h  main.c  package_avl.c  package_avl.h  package_list.c  package_list.h  returns_stack.c  returns_stack.h  routes_graph.c  routes_graph.h  types.h
